# gli-editor

./: .clippy.toml  .gitignore  .gitleaksignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  dir_report.json  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: release.yml
specs/001-gitleaksignore-editor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gitleaksignore-editor/checklists/: requirements.md
specs/001-gitleaksignore-editor/contracts/: cli-interface.md
src/: app.rs  error.rs  main.rs
src/core/: backup.rs  editor.rs  file_reader.rs  line_parser.rs  mod.rs
src/models/: edit.rs  line.rs  mod.rs  pattern.rs
src/ui/: editor.rs  mod.rs  navigation.rs  styles.rs  viewer.rs
